# fastapi_ml

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  untitle.http
fastapi_ml/: MSFT.joblib
tests/: test_fastapi_ml.py
