[tool.poetry]
name = "fastapi-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
joblib = "^1.1.0"
pandas = "^1.4.1"
plotly = "^5.6.0"
yfinance = "^0.1.70"
Cython = "^0.29.28"
pystan = "^2.19.1.1"
fbprophet = "^0.7.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
